Fixed modal dialog z-index

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -154,3 +154,7 @@ h1{
 a, a:hover, a:active {
   text-decoration: none;
 }
+
+.modal-dialog{
+  z-index: 1150;
+}
